tests/snapshots/test_runner__tests__compiler__typecheck__single_dispatch_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: Int = 2
let foo (_: String): String = "Hello"

============
EXIT CODE
============
0

============
STDOUT
============


============
STDERR
============
