tests/snapshots/test_runner__tests__compiler__typecheck__switch_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let and = (x: Boolean, y: Boolean): Boolean =>
  switch {x, y} {
    case {x: true, y: true}: true
    case _: false
  }

true.and(true).print()
true.and(false).print()
false.and(true).print()
false.and(false).print()

============
EXIT CODE
============
0

============
STDOUT
============
true
false
false
false

============
STDERR
============
