tests/snapshots/test_runner__tests__compiler__typecheck__top_level_let_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Top level destructuring
let {x, y} = {
  x: (i: Integer): String => "Hello",
  y: (b: Boolean): String => "World"
}

do 1.x().print()
do true.y().print()

============
EXIT CODE
============
0

============
STDOUT
============
Hello
World

============
STDERR
============
