tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_character_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let a: Character = 'c'
let b: Character = "c"

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_character_1.kk:2:20
  │
2 │ let b: Character = "c"
  │                    ^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Character   | + String    |
    +---------------+-------------+
